syntax = "proto3";

package pb;

option go_package = "./;pb";

import "google/api/annotations.proto";

service transactionsAPI {
  // Get all transactions
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse) {
    option (google.api.http) = {
      get: "/transactions/list_transactions"
    };
  };
  // Get transaction by id
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {
    option (google.api.http) = {
      get: "/transactions/get_transaction/{id}"
    };
  };
  // Add new transaction
  rpc AddTransaction(AddTransactionRequest) returns (AddTransactionResponse) {
    option (google.api.http) = {
      post: "/transactions/add_transaction"
      body: "*"
    };
  };
}

message ListTransactionsRequest {
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

message GetTransactionRequest {
  uint64 id = 1;
}

message GetTransactionResponse {
  Transaction Transaction = 1;
}

message AddTransactionRequest {
  Transaction Transaction = 1;
}

message AddTransactionResponse {
  Transaction Transaction = 1;
}

message Transaction {
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 product_id = 3;
  string quantity = 4;
  string total = 5;
}